# imlib2

./: .gitignore  .indent.pro  ChangeLog  Makefile.am  autogen.sh  configure.ac  imlib2.c.in
doc/: Makefile.am  index.html
misc/: mkchangelog.sh
src/lib/: Imlib2.h  Imlib2.h.in  Imlib2_Loader.h  Makefile.am  amd64_blend.S  amd64_blend_cmod.S  api.c  api.h  api_filter.c  api_obsolete.c  api_x11.c  asm.h  asm_blend.S  asm_blend_cmod.S  asm_rgba.S  blend.c  blend.h  colormod.c  common.h  context.c  debug.c  ellipse.c  file.c  file.h  filter.c  font.h  font_draw.c  font_load.c  font_main.c  font_query.c  grab.c  grad.c  image.c  image.h  image_tags.c  line.c  loaders.c  loaders.h  modules.c  polygon.c  (+27 more)
src/modules/filters/: Makefile.am  filter_bumpmap.c  filter_colormod.c  filter_test.c
src/modules/loaders/: Makefile.am  decompress_load.c  exif.c  loader_ani.c  loader_argb.c  loader_avif.c  loader_bmp.c  loader_bz2.c  loader_common.h  loader_ff.c  loader_gif.c  loader_heif.c  loader_ico.c  loader_id3.c  loader_j2k.c  loader_jpeg.c  loader_jxl.c  loader_lbm.c  loader_lzma.c  loader_png.c  loader_pnm.c  loader_ps.c  loader_qoi.c  loader_svg.c  loader_tga.c  loader_tiff.c  loader_webp.c  loader_xbm.c  loader_xpm.c  loader_y4m.c  loader_zlib.c
test/: .gitignore  Makefile.am  test.cpp  test.h  test_common.h  test_context.cpp  test_file.cpp  test_grab.cpp  test_load.cpp  test_load_2.cpp  test_misc.cpp  test_rotate.cpp  test_save.cpp  test_scale.cpp  test_scale_2.cpp  test_string.cpp
test/images/: Makefile  icon-64-10.pam  icon-64-10.pgm  icon-64-10.ppm  icon-64-12.pam  icon-64-12.pgm  icon-64-12.ppm  icon-64-14.pam  icon-64-14.pgm  icon-64-14.ppm  icon-64-16.pam  icon-64-16.pgm  icon-64-16.ppm  icon-64-P1.pbm  icon-64-P2.pgm  icon-64-P3.ppm  icon-64-P7_332.ppm  icon-64-gray.j2k  icon-64-gray.jp2  icon-64-gray.pam  icon-64-mono.pam  icon-64.argb  icon-64.aspect_unsupported.y4m  icon-64.ff  icon-64.ff.bz2  icon-64.ff.xz  icon-64.framerate_1_1.y4m  icon-64.heif  icon-64.ilbm  icon-64.j2k  icon-64.jp2  icon-64.jxl  icon-64.pam  icon-64.pbm  icon-64.pgm  icon-64.ppm  icon-64.qoi  icon-64.tga  icon-64.tiff  icon-64.xbm  (+75 more)
